<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.InformacaoDesenvolvedor">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="237dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_launcher" />

        </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        android:padding="12dp">

        <TextView
            android:id="@+id/autor"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="403dp"
            android:layout_height="42dp"
            android:text="@string/autor"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="46dp" />

        <TextView
            android:id="@+id/app"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="262dp"
            android:layout_height="38dp"
            android:text="@string/nomeApp"
            android:textColor="#000"
            app:layout_constraintBottom_toTopOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autor" />

        <TextView
            android:id="@+id/textView2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="373dp"
            android:layout_height="150dp"
            android:text="@string/texto"
            android:textColor="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="263dp"
            app:layout_constraintTop_toBottomOf="@+id/app" />

        <TextView
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/versao"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>